<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/studentHomeLayout"
    tools:context=".Main.StudentHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="95dp">

        <TableLayout
            android:id="@+id/overviewButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/registered_as" />

                <TextView
                    android:id="@+id/full_name_view"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/age_view"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="@string/signed" />

                <TextView
                    android:id="@+id/signed_to"
                    android:layout_weight="1"
                    android:text="@string/signed_to" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:text="prev_hash" />

                <TextView
                    android:id="@+id/prev_hash"
                    android:layout_weight="1"
                    android:text="@string/signed_to" />
            </TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/connected_institutions"/>

            <!--<TableRow android:layout_marginBottom="10dp">-->
                <!--<TextView-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/left_connections"-->
                    <!--android:textColor="@android:color/black"-->
                    <!--android:textStyle="bold" />-->

                <!--<TextView-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/right_connections"-->
                    <!--android:textColor="@android:color/black"-->
                    <!--android:textStyle="bold" />-->
            <!--</TableRow>-->

        </TableLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/incomming_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

            <!--<ListView-->
                <!--android:id="@+id/outgoing_peer_connection_list_view"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="5" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_peer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_corners"
                android:onClick="onClickConnectInstitution"
                android:text="@string/add_institution"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/open_inbox_item"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_corners"
                android:onClick="onClickOpenInbox"
                android:text="@string/inbox"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>